# LocalMaxMatching

./: .gitignore  CMakeLists.txt  LICENSE  README.md  makefile
common/: edge.h  get_graph.h  grid_graph.h  grid_graph_2d.h  grid_graph_general.h  hash_functions.h  input_info.h  k_n_graph.h  linear_buffered_reader.h  log_n_type.h  math_funcs.h  metis_dimacs_reader.h  mpi_system_support.h  parallel_metis_dimacs_reader.h  parallel_metis_dimacs_reader_evenly_distributed.h  rating_functions.h  read_command_line_arguments.h  read_matrix_market.h  union_find.h
graphs/: adjacency_array.h  adjacency_array_graph_with_active_edges_vector.h  adjacency_list.h  edge_graph.h  parallel_edge_graph.h  parallel_forest.h  tree.h
matching_algorithms/: karp_sipser.h  local_maximum_matching-adjacency_array.h  local_maximum_matching-vertex_id_for_tie_breaking.h  local_maximum_matching.h  local_tree_maximum_matching.h  mixed-karp_sipser_and_local_max.h  parallel_forest_matching.h  parallel_local_maximum_matching.h  parallel_local_tree_maximum_matching.h  tags  tree_matching.h
optimal_matchings/: optimal_lemon_matching.cpp
programs/: add_random_weights_to_metis_graph.cpp  arrange_nodes_along_a_curve.cpp  compute_edge_distribution.cpp  create_node_index_for_metis_graph.cpp  karp_sipser_matching.cpp  local_max_matching.cpp  local_tree_matching.cpp  matching.h  matrix_market_to_bipartite_metis.cpp  mem_usg_of_hypercube_matching.cpp  mixed-karp_sipser-local_max.cpp  parallel_local_max_matching.cpp  parallel_local_tree_matching.cpp  parallel_matching.h  test_tree_matching.cpp
